fix: readjust z-index & subhead #29

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -35,6 +35,13 @@ $font-large: 18px;
 $font-medium: 16px;
 $font-small: 14px;
 
+//----------------------- $z-index ------------------------
+$zindex-subhead: 100;
+$zindex-mobile-search: 1000;
+$zindex-side-nav: 2000;
+$zindex-upload-avatar: 10000;
+$zindex-quickapp-btn: 99999;
+
 //--------------------- width height ----------------------
 $mobile-screen: 960px;
 $large-screen: 1335px;
